src/sections/Skills/Skills.css
#skills {
  background-size: 100% 100%;
  background-position: 0px 0px;
  background-image: linear-gradient(0deg, #ffffffff 0%, #f5f5f4 50%);
  margin-top: 5rem;

  /* `md` -	48rem (768px) */
  @media (width >= 48rem) {
    /* margin-inline: 2rem; */
  }

  /* `lg` 64rem (1024px) */
  @media (width >= 64rem) {
    /* margin-inline: 0;
    scroll-margin-top: 100px; */
  }

  .skill-card-mini:hover .tooltip {
    visibility: visible;
  }

  .tooltip {
    visibility: hidden;
    --tooltip-bg: rgba(0, 0, 0, 0.75);
    position: absolute;
    bottom: 120%;
    left: 50%;
    font-size: 0.875rem;
    transform: translateX(-50%);
    background-color: var(--tooltip-bg);
    padding: 4px 8px;
    border-radius: 4px;
    color: #fff;

    &:after {
      content: "";
      position: absolute;
      top: 100%;
      left: 50%;
      margin-left: -5px;
      border-width: 5px;
      border-style: solid;
      border-color: var(--tooltip-bg) transparent transparent transparent;
    }
  }
}

